ensure contact link text stays visible when clicked

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -202,6 +202,10 @@
   &:hover {
     color: $secondary-text-color;
   }
+  &:active,
+  &:focus {
+    color: inherit;
+  }
   @include rwd(1024) {
     display: inline-block;
   }
